--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "falze",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "authors": [
@@ -23,9 +23,9 @@
     "tests"
   ],
   "dependencies": {
-    "falzy": "^0.0.0",
-    "arid": "^0.0.2",
+    "arid": "^0.0.3",
     "doubt": "^0.0.6",
-    "empt": "^0.0.3"
+    "empt": "^0.0.3",
+    "falzy": "^0.0.1"
   }
 }
