--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -23,10 +24,10 @@
     "tests"
   ],
   "dependencies": {
-    "arid": "^0.2.0",
-    "doubt": "^0.2.0",
-    "empt": "^0.1.0",
-    "falzy": "^0.3.0",
-    "protype": "^0.2.0"
+    "arid": "^0.3.0",
+    "doubt": "^0.4.0",
+    "empt": "^0.2.0",
+    "falzy": "^0.5.0",
+    "protype": "^0.4.0"
   }
 }
