--- a/package.json
+++ b/package.json
@@ -30,10 +30,18 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.3.0",
-    "doubt": "^0.4.0",
-    "empt": "^0.2.0",
-    "falzy": "^0.5.0",
-    "protype": "^0.4.0"
+    "arid": "^0.4.0",
+    "babel-runtime": "^6.20.0",
+    "doubt": "^0.6.0",
+    "empt": "^0.3.0",
+    "falzy": "^0.7.0",
+    "protype": "^0.7.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
+    "webpack": "^1.14.0"
   }
 }
