--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "falze",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "support": "falze.support.js",
@@ -30,18 +30,19 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.4.0",
-    "babel-runtime": "^6.20.0",
-    "doubt": "^0.6.0",
-    "empt": "^0.3.0",
-    "falzy": "^0.7.0",
-    "protype": "^0.7.0"
+    "arid": "^0.5.0",
+    "babel-runtime": "^6.22.0",
+    "doubt": "^0.8.0",
+    "empt": "^0.4.0",
+    "falzy": "^0.8.0",
+    "protype": "^0.9.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "source-map-loader": "^0.1.6",
     "webpack": "^1.14.0"
   }
 }
