--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "falze",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Check if entity is falsy or empty.",
-  "main": "falze.js",
-  "support": "falze.support.js",
-  "deploy": "falze.deploy.js",
+  "main": "falze.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -26,10 +24,10 @@
     "tests"
   ],
   "dependencies": {
-    "arid": "^0.7.0",
-    "doubt": "^0.10.0",
-    "empt": "^0.5.0",
-    "falzy": "^0.10.0",
-    "protype": "^0.11.0"
+    "arid": "^0.11.0",
+    "doubt": "^0.13.0",
+    "empt": "^0.9.0",
+    "falzy": "^0.11.0",
+    "protype": "^0.15.0"
   }
 }
