--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "falze",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "support": "falze.support.js",
   "deploy": "falze.deploy.js",
+  "browser": "falze.deploy.js",
   "scripts": {
     "build": "babel falze.js -o falze.support.js && webpack",
     "test": "mocha falze-test.js"
@@ -30,12 +31,12 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.7.0",
+    "arid": "^0.11.0",
     "babel-runtime": "^6.22.0",
-    "doubt": "^0.10.0",
-    "empt": "^0.5.0",
-    "falzy": "^0.10.0",
-    "protype": "^0.11.0"
+    "doubt": "^0.13.0",
+    "empt": "^0.9.0",
+    "falzy": "^0.11.0",
+    "protype": "^0.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -43,6 +44,6 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.1"
   }
 }
