--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "falze",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.deploy.js",
+  "support": "falze.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -24,10 +25,10 @@
     "tests"
   ],
   "dependencies": {
-    "arid": "^0.12.0",
-    "doubt": "^0.14.0",
-    "empt": "^0.10.0",
-    "falzy": "^0.11.0",
-    "protype": "^0.15.0"
+    "arid": "^0.13.0",
+    "doubt": "^0.15.0",
+    "empt": "^0.11.0",
+    "falzy": "^0.12.0",
+    "protype": "^0.16.0"
   }
 }
