--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "falze",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "support": "falze.support.js",
   "deploy": "falze.deploy.js",
   "browser": "falze.deploy.js",
   "scripts": {
-    "build": "babel falze.js -o falze.support.js && webpack",
+    "build": "babel falze.js -o falze.support.js && webpack --progress",
     "test": "mocha falze-test.js"
   },
   "repository": {
@@ -31,17 +31,17 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.12.0",
+    "arid": "^0.13.0",
     "babel-runtime": "^6.22.0",
-    "doubt": "^0.14.0",
-    "empt": "^0.10.0",
-    "falzy": "^0.11.0",
-    "protype": "^0.15.0"
+    "doubt": "^0.15.0",
+    "empt": "^0.11.0",
+    "falzy": "^0.12.0",
+    "protype": "^0.16.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
     "webpack": "^2.2.1"
