--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "falze",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "support": "falze.support.js",
   "deploy": "falze.deploy.js",
   "browser": "falze.deploy.js",
   "scripts": {
-    "build": "babel falze.js -o falze.support.js && webpack --progress",
+    "build": "babel falze.js --out-file falze.support.js --source-maps && webpack --progress",
     "test": "mocha falze-test.js"
   },
   "repository": {
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.13.0",
-    "babel-runtime": "^6.22.0",
-    "doubt": "^0.15.0",
-    "empt": "^0.11.0",
-    "falzy": "^0.12.0",
-    "protype": "^0.16.0"
+    "arid": "^0.14.0",
+    "babel-runtime": "^6.23.0",
+    "doubt": "^0.16.0",
+    "empt": "^0.12.0",
+    "falzy": "^0.13.0",
+    "protype": "^0.17.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
