--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "falze",
-  "version": "0.23.0",
+  "version": "0.24.0",
   "description": "Check if entity is falsy or empty.",
   "main": "falze.js",
   "support": "falze.support.js",
@@ -23,7 +23,8 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -31,19 +32,18 @@
   },
   "homepage": "https://github.com/volkovasystems/falze#readme",
   "dependencies": {
-    "arid": "^0.26.0",
+    "arid": "^0.27.0",
     "babel-runtime": "^6.23.0",
-    "doubt": "^0.27.0",
-    "empt": "^0.23.0",
-    "falzy": "^0.20.0",
-    "protype": "^0.22.0"
+    "doubt": "^0.28.0",
+    "empt": "^0.24.0",
+    "falzy": "^0.20.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.6.1"
+    "webpack": "^3.0.0"
   }
 }
