--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,12 @@
 		"bower_components",
 		"test",
 		"tests"
-	]
+	],
+	"dependencies": {
+		"arid": "^0.30.0",
+		"doubt": "^0.34.0",
+		"empt": "^0.27.0",
+		"falzy": "^0.23.0",
+		"protype": "^0.24.0"
+	}
 }
